fixed some issues in  html file and css file

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
           </div>
         </div>
         <div class="weeks">
-          <ul>
-            <li class="dailyButton">Daily</li>
-            <li class="weeklyButton">Weekly</li>
-            <li class="monthlyButton">Monthly</li>
-          </ul>
+          <button id="dailyButton">Daily</button>
+          <button id="weeklyButton">Weekly</button>
+          <button id="monthlyButton">Monthly</button>
         </div>
       </div>
 
@@ -45,12 +43,12 @@
         <div class="stat-bg"></div>
         <div class="stats-details">
           <div class="stats-title">
-            <h3 id="title">Work</h3>
+            <h3>Work</h3>
             <strong>. . .</strong>
           </div>
           <div class="stats-hours">
-            <h2 id="hours">32hrs</h2>
-            <span>Last Week - <span id="last-week">5hrs</span></span>
+            <h2 class="hours">32hrs</h2>
+            <small>Last Week - <span class="last-week">5hrs</span></small>
           </div>
         </div>
       </div>
@@ -58,12 +56,12 @@
         <div class="stat-bg"></div>
         <div class="stats-details">
           <div class="stats-title">
-            <h3 id="title">Play</h3>
+            <h3>Play</h3>
             <strong>. . .</strong>
           </div>
           <div class="stats-hours">
-            <h2 id="hours">32hrs</h2>
-            <span>Last Week - <span id="last-week">5hrs</span></span>
+            <h2 class="hours">32hrs</h2>
+            <small>Last Week - <span class="last-week">5hrs</span></small>
           </div>
         </div>
       </div>
@@ -71,12 +69,12 @@
         <div class="stat-bg"></div>
         <div class="stats-details">
           <div class="stats-title">
-            <h3 id="title">Study</h3>
+            <h3>Study</h3>
             <strong>. . .</strong>
           </div>
           <div class="stats-hours">
-            <h2 id="hours">32hrs</h2>
-            <span>Last Week - <span id="last-week">5hrs</span></span>
+            <h2 class="hours">32hrs</h2>
+            <small>Last Week - <span class="last-week">5hrs</span></small>
           </div>
         </div>
       </div>
@@ -84,12 +82,12 @@
         <div class="stat-bg"></div>
         <div class="stats-details">
           <div class="stats-title">
-            <h3 id="title">Exercise</h3>
+            <h3>Exercise</h3>
             <strong>. . .</strong>
           </div>
           <div class="stats-hours">
-            <h2 id="hours">32hrs</h2>
-            <span>Last Week - <span id="last-week">5hrs</span></span>
+            <h2 class="hours">32hrs</h2>
+            <small>Last Week - <span class="last-week">5hrs</span></small>
           </div>
         </div>
       </div>
@@ -97,12 +95,12 @@
         <div class="stat-bg"></div>
         <div class="stats-details">
           <div class="stats-title">
-            <h3 id="title">Social</h3>
+            <h3>Social</h3>
             <strong>. . .</strong>
           </div>
           <div class="stats-hours">
-            <h2 id="hours">32hrs</h2>
-            <span>Last Week - <span id="last-week">5hrs</span></span>
+            <h2 class="hours">32hrs</h2>
+            <small>Last Week - <span class="last-week">5hrs</span></small>
           </div>
         </div>
       </div>
@@ -110,12 +108,12 @@
         <div class="stat-bg"></div>
         <div class="stats-details">
           <div class="stats-title">
-            <h3 id="title">Self Care</h3>
+            <h3>Self Care</h3>
             <strong>. . .</strong>
           </div>
           <div class="stats-hours">
-            <h2 id="hours">32hrs</h2>
-            <span>Last Week - <span id="last-week">5hrs</span></span>
+            <h2 class="hours">32hrs</h2>
+            <small>Last Week - <span class="last-week">5hrs</span></small>
           </div>
         </div>
       </div>
