change section tag to main

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
-    <section class="dashboard-container">
+    <main class="dashboard-container">
       <div class="profile-card-container">
         <div class="profile-card">
           <div class="avatar">
@@ -117,7 +117,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </main>
 
     <footer>
       <div class="author">
